[gd_scene load_steps=10 format=2]

[ext_resource path="res://monogram-extended.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/management/startscreen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="TileSet" id=7]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.105882, 0.105882, 1 )

[node name="Controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -58.0
margin_right = 54.0
margin_bottom = 58.0

[node name="StartButton" type="Button" parent="Controls"]
margin_right = 108.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../QuitButton")
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.396078, 0.909804, 1 )
custom_colors/font_color_pressed = Color( 0.364706, 0.0196078, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Iniciar"

[node name="ControlsButton" type="Button" parent="Controls"]
margin_top = 30.0
margin_right = 108.0
margin_bottom = 56.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.396078, 0.909804, 1 )
custom_colors/font_color_pressed = Color( 0.364706, 0.0196078, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controles"

[node name="CreditsButton" type="Button" parent="Controls"]
margin_top = 60.0
margin_right = 108.0
margin_bottom = 86.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.396078, 0.909804, 1 )
custom_colors/font_color_pressed = Color( 0.364706, 0.0196078, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Creditos"

[node name="QuitButton" type="Button" parent="Controls"]
margin_top = 90.0
margin_right = 108.0
margin_bottom = 116.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.396078, 0.909804, 1 )
custom_colors/font_color_pressed = Color( 0.364706, 0.0196078, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 7 )
format = 1

[connection signal="pressed" from="Controls/StartButton" to="." method="on_StartButton_pressed"]
[connection signal="pressed" from="Controls/ControlsButton" to="." method="on_ControlsButton_pressed"]
[connection signal="pressed" from="Controls/CreditsButton" to="." method="on_CreditsButton_pressed"]
[connection signal="pressed" from="Controls/QuitButton" to="." method="on_QuitButton_pressed"]
